# atomcam

./: .gitignore  README.md  app.py  pyproject.toml
client/: index.html  package.json
client/src/: App.css  App.tsx
